# eglproxy

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README.md  astylerc  premake4.lua  premake5.lua
inc/: eglproxy.h
inc/KHR/: khrplatform.h
src/: egl_glx.c  egl_proc.c  egl_wgl.c  eglproxy.c
tests/: CMakeLists.txt  egltest.c  minunit.h  platform_mock.c
